<resources>
    <string name="app_name">TimeMark Pro</string>
    <string name="app_title">TimeMark Pro</string>
    <string name="text_time_formater">d \'Tháng\' M, yyyy</string>
    <string name="text_time_formater_v2">dd/MM/yyyy</string>
    <string name="text_day_demo">EEEE,</string>
    <string name="text_address">Đang lấy địa chỉ…</string>
    <string name="text_time_content">Time</string>
    <string name="text_mark_content">mark</string>
    <string name="text_content">100% Chân thực</string>
    <string name="text_timemark_verified">Timemark Verified</string>
    <string name="cotent_m5c3k8qarjx83l">M5C3K8QARJX83L</string>
    <string name="name_fake">Họ tên : Hoàng Khánh Linh</string>
    <string name="verified_image_fake">Mã Ảnh : 123456789999</string>
    <string name="choose_image">Chọn ảnh</string>
    <string name="text_save_image">Lưu ảnh</string>
    <string name="text_edit_image">Sửa thông tin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_take_a_pic">Chụp ảnh</string>
    <string name="text_take_img">Chọn ảnh</string>
    <string name="select_mode">Chọn chế độ</string>
    <string name="text_save_info">Save Info</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="text_active">Kích hoạt</string>
    <string name="dimen_id">Android ID:</string>
    <string name="dimen_text_android_id">8977214762674</string>
    <string name="text_active_key">Mã Kích Hoạt</string>
    <string name="text_active_1">Kích hoạt</string>
    <string name="image_verified_code">Mã ảnh: %1$s</string>
</resources>