<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".screen.SelectModeEditImageActivity">

    <TextView
        android:id="@+id/titleScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:fontFamily="@font/be_vietnam_pro"
        android:gravity="center"
        android:padding="26dp"
        android:text="@string/select_mode"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_30sp"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/viewDot"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/chooseCamera"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="-100dp"
        android:background="@drawable/bg_corner_button_ripple"
        android:fontFamily="@font/stack_sans_text_medium"
        android:padding="18dp"
        android:text="@string/text_take_a_pic"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleScreen" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/chooseImage"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/bg_corner_button_ripple"
        android:fontFamily="@font/stack_sans_text_medium"
        android:padding="18dp"
        android:text="@string/text_take_img"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_26sp"
        app:layout_constraintEnd_toEndOf="@+id/chooseCamera"
        app:layout_constraintStart_toStartOf="@+id/chooseCamera"
        app:layout_constraintTop_toBottomOf="@+id/chooseCamera" />

</androidx.constraintlayout.widget.ConstraintLayout>