<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/timeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/txtAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.example.timemarkbase.custom_view.TimeDigitView
            android:id="@+id/txtTime"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewLine1"
            android:layout_width="3dp"
            android:layout_height="34dp"
            android:layout_marginHorizontal="4dp"
            android:background="#F4B527"
            app:layout_constraintBottom_toBottomOf="@+id/txtTime"
            app:layout_constraintStart_toEndOf="@+id/txtTime"
            app:layout_constraintTop_toTopOf="@+id/txtTime" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:orientation="vertical"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="@+id/txtTime"
            app:layout_constraintStart_toEndOf="@+id/viewLine1"
            app:layout_constraintTop_toTopOf="@+id/txtTime">

            <TextView
                android:id="@+id/txtDateFormater"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingBottom="4dp"
                android:text="@string/text_time_formater"
                android:textColor="#FFFFFF"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/txtDay"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingTop="4dp"
                android:text="@string/text_day_demo"
                android:textColor="#FFFFFF"
                android:textSize="13sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:maxLines="2"
        android:paddingStart="6dp"
        android:text="@string/text_address"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/llLayoutC"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/llLayoutC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_custom_text_view"
        android:orientation="vertical"
        android:paddingStart="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txtLatAndLon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:visibility="gone"
            tools:text="@string/name_fake" />

        <TextView
            android:id="@+id/txtNameUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/name_fake"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>
</merge>
