<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".screen.ActiveActivity">

    <TextView
        android:id="@+id/titleScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:fontFamily="@font/be_vietnam_pro"
        android:gravity="center"
        android:padding="26dp"
        android:text="@string/text_active"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_30sp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/titleScreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/edtActiveKey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textAndroidId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dimen_id"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/androidId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_30sp"
                app:layout_constraintBottom_toBottomOf="@id/textAndroidId"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textAndroidId"
                app:layout_constraintTop_toTopOf="@id/textAndroidId" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtActiveKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/text_active_key"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="#897A7A"
            app:endIconMode="clear_text"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textActive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnActive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_corner_button_ripple"
            android:text="@string/text_active_1"
            android:layout_marginTop="100dp"
            android:layout_marginHorizontal="50dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/edtActiveKey"
            app:layout_constraintStart_toStartOf="@+id/edtActiveKey"
            app:layout_constraintTop_toBottomOf="@+id/edtActiveKey" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>