<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/csLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--        <com.example.timemarkbase.custom_view.TimeDigitView-->
        <!--            android:id="@+id/txtTime"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="28dp"-->
        <!--            android:layout_marginStart="6dp"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent" />-->


        <View
            android:id="@+id/viewLine1"
            android:layout_width="3dp"
            android:layout_height="0dp"
            android:background="@color/color_main_ui"
            app:layout_constraintBottom_toBottomOf="@+id/csLayout"
            app:layout_constraintStart_toStartOf="@+id/csLayout"
            app:layout_constraintTop_toTopOf="@+id/csLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/csLayout"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lineSpacingExtra="3dp"
                android:maxLines="1"
                android:paddingStart="6dp"
                tools:textColor="@color/black"
                android:text="@string/text_day_demo"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/dimen_13.5sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="22:56"
                android:layout_marginStart="4dp"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_13.5sp"
                tools:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/txtDateFormater"
                app:layout_constraintStart_toEndOf="@+id/txtDateFormater"
                app:layout_constraintTop_toTopOf="@+id/txtDateFormater"
                tools:text="22:56" />

            <TextView
                android:id="@+id/txtDateFormater"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/text_time_formater"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/dimen_13.5sp"
                android:layout_marginStart="4dp"
                app:layout_constraintBottom_toBottomOf="@+id/txtDay"
                app:layout_constraintStart_toEndOf="@+id/txtDay"
                app:layout_constraintTop_toTopOf="@+id/txtDay"
                tools:text="Thu 5, 12/03/2026"
                tools:textColor="@color/black" />

            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3dp"
                android:maxLines="2"
                android:layout_marginTop="8dp"
                android:paddingStart="6dp"
                tools:textColor="@color/black"
                android:text="@string/text_address"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/dimen_13.5sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDay"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/txtNameUser"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bg_custom_text_view"
        android:maxLines="2"
        android:paddingStart="6dp"
        android:text="@string/name_fake"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_13.5sp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/csLayout1" />
    
    <View
        android:id="@+id/viewLine"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="#C9E4DFDF"
        android:layout_marginStart="6dp"
        android:layout_marginVertical="4dp"
        app:layout_constraintTop_toBottomOf="@+id/txtNameUser"
        app:layout_constraintStart_toStartOf="@+id/txtImageVerified"
        app:layout_constraintEnd_toEndOf="@+id/txtImageVerified" />

    <TextView
        android:id="@+id/txtImageVerified"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:drawableStart="@drawable/icon_verified_v2"
        android:drawablePadding="6dp"
        android:maxLines="1"
        android:padding="1dp"
        android:paddingStart="6dp"
        android:fontFamily="@font/be_bas_dakar_font"
        android:text="@string/verified_image_fake"
        android:textColor="#D9E4DFDF"
        android:textSize="@dimen/dimen_13.5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLine"
        tools:textColor="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>